// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PRIMITIVES SIMPLE WEB 1`] = `
Array [
  <div
    onClick={[Function]}
  >
    Count=1, ctx=1
  </div>,
  <span
    onClick={[Function]}
  >
    Value=
    1
  </span>,
]
`;

exports[`PRIMITIVES SIMPLE WEB 2`] = `
Array [
  <div
    onClick={[Function]}
  >
    Count=2, ctx=1
  </div>,
  <span
    onClick={[Function]}
  >
    Value=
    1
  </span>,
]
`;

exports[`PRIMITIVES SIMPLE WEB 3`] = `
Array [
  <div
    onClick={[Function]}
  >
    Count=2, ctx=2
  </div>,
  <span
    onClick={[Function]}
  >
    Value=
    2
  </span>,
]
`;

exports[`PRIMITIVES SIMPLE WEB 4`] = `
Array [
  <div
    onClick={[Function]}
  >
    Count=4, ctx=2
  </div>,
  <span
    onClick={[Function]}
  >
    Value=
    2
  </span>,
]
`;
